# mould-rs

./: Cargo.toml  Cargo.toml.out  LICENSE  README.md  config.example.toml  config.toml
.gitea/workflows/: release.yaml  version-check.yaml
lua/mould/: init.lua
plugin/: mould.lua
src/: app.rs  cli.rs  config.rs  env.rs  error.rs  main.rs  resolver.rs  runner.rs  ui.rs  undo.rs
src/format/: env.rs  hierarchical.rs  ini.rs  mod.rs  properties.rs
