[[bin]]
name = "mould"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
crossterm = "0.29.0"
dirs = "6.0.0"
env_logger = "0.11.9"
log = "0.4.29"
ratatui = "0.30.0"
serde_json = "1.0.149"
serde_yaml = "0.9.34"
thiserror = "2.0.18"
toml = "1.0.6"
tui-input = "0.15.0"

[dependencies.clap]
features = ["derive"]
version = "4.6.0"

[dependencies.serde]
features = ["derive"]
version = "1.0.228"

[dev-dependencies]
tempfile = "3.27.0"

[package]
authors = ["Nils Pukropp <nils@narl.io>"]
edition = "2024"
name = "mould"
version = "0.4.2"
